<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="digits_pass_verify">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789</string>
    <string name="digits_id_card">0123456789xX</string>
    <string name="digits_numbers_and_letters">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789</string>


    <string name="app_name">物界</string>
    <string name="my_store">我的店铺</string>
    <string name="id">ID:</string>
    <string name="logout">退出登录</string>
    <string name="search">搜索</string>
    <string name="reset">重置</string>
    <string name="edit_key_word">输入关键字</string>

    <string name="price">￥%1$s</string>
    <string name="my_live">我的直播</string>
    <string name="create_live">创建直播</string>
    <string name="realname_identity">实名认证</string>
    <string name="my_attention">我的关注</string>
    <string name="attention_product">关注商品</string>
    <string name="attention_store">关注店铺</string>
    <string name="super_manager">超级管理</string>
    <string name="live_manager">直播管理</string>
    <string name="pls_edit_real_name">请填写真实姓名</string>
    <string name="card_id">身份证号</string>
    <string name="name">姓名</string>
    <string name="hint_edit_id_card">请填写正确的身份证号(将加密保存)</string>
    <string name="asterisk">*</string>
    <string name="dis_upload_back_card">上传身份证正反面照片</string>
    <string name="hint_id_card">温馨提示：请上传原始比例身份证正反面，请勿剪裁涂改，保证身份证清晰显示，否则无法通过审核。</string>
    <string name="example_front">例(人像面)</string>
    <string name="example_back">例(国徽面)</string>
    <string name="click_for_up_front">点击上传身份证人像面</string>
    <string name="click_for_up_back">点击上传身份证国徽面</string>
    <string name="commit_identity">提交认证</string>
    <string name="press_exit_again">再按一次退出</string>
    <string name="hint_permission_denied">请先在设置中配置相应权限!</string>
    <string name="hint_create_live_title">输入标题更吸引粉丝</string>
    <string name="live_class">直播分类</string>
    <string name="add_product">添加商品</string>
    <string name="create_prevue">创建预告</string>
    <string name="tip_create_prevue">为你的直播添加些悬念吧</string>
    <string name="notify_all_followers">通知所有关注者</string>
    <string name="definition">清晰度</string>
    <string name="price_range">价格区间</string>
    <string name="min_price">最低价</string>
    <string name="middle_strike">-</string>
    <string name="max_price">最高价</string>
    <string name="commission_range">佣金区间</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="loading">Loading..</string>
    <string name="title_live_type">直播分类</string>
    <string name="select_product">选择直播间商品</string>
    <string name="tip_select_product">最多可选50件商品</string>
    <string name="commit_with_num">确认(%1$d)</string>
    <string name="commit_with_num_0">确认(0)</string>
    <string name="real_name">实名认证</string>
    <string name="phone_num">手机号</string>
    <string name="send_code">发送验证码</string>
    <string name="pls_input_code">请输入验证码</string>
    <string name="login_commit">立即登录</string>
    <string name="wx_login">微信登录</string>

    <!--    <string name="tip_login">登录即表明您同意《鲸享家用户服务协议》、《隐私政策》</string>-->
    <string name="tip_login">登录即表明您同意%1$s、%2$s</string>
    <string name="tip_target_1">《鲸享家用户服务协议》</string>
    <string name="tip_target_2">《隐私政策》</string>
    <!-- ##############################################################################  -->

    <string name="start_live">开始直播</string>
    <string name="preview">预告</string>
    <string name="pause">暂停中</string>
    <string name="finished">已结束</string>
    <string name="u_start_time">"开播时间: "</string>
    <string name="u_end_time">"结束时间: "</string>
    <string name="continue_live">继续直播</string>
    <string name="u_live_duration">直播时长：</string>
    <string name="mine_attention_product">我关注的商品</string>
    <string name="cancel_attention">取消关注</string>
    <string name="mine_attention_store">我关注的店铺</string>
    <string name="fence_num">粉丝数</string>
    <string name="product_detail">商品详情</string>
    <string name="store">店铺</string>
    <string name="add">立即添加</string>
    <string name="single_price">单价</string>
    <string name="coupon">优惠券</string>
    <string name="tip_pls_choose_color">请选择品牌颜色等</string>
    <string name="open_live">开始直播</string>
    <string name="packages">购物袋</string>
    <string name="hint_say_something">说点什么呢~</string>
    <string name="share">分享</string>
    <string name="tools">工具</string>
    <string name="tip_loading">正在加载</string>
    <string name="complete">完成</string>
    <string name="advance_time">预告时间</string>
    <string name="title_fragment_steward">管家中心</string>
    <string name="Housekeeper_fee_has_been_withdrawn">已提现管家费（元）</string>
    <string name="Housekeeper_fee_may_be_withdrawn">可提现管家费（元）</string>
    <string name="customer_order">客户订单</string>
    <string name="Immediate_withdrawal">立即提现</string>
    <string name="my_customer">我的客户</string>
    <string name="Immediate_promotion">立即推广</string>
    <string name="Estimated_housekeeping_fee">预计管家费</string>
    <string name="All">全部</string>
    <string name="wait_for_payment">待付款</string>
    <string name="Paid">已付款</string>
    <string name="wait_for_receiving">待收货</string>
    <string name="completed">已完成</string>
    <string name="Can_get_the_fee">可得佣金</string>
    <string name="order_num_des">共%1$d件商品 合计:</string>
    <string name="withdraw_trans">提现明细</string>
    <string name="Please_enter_withdrawal_amount">请输入提现金额</string>
    <string name="withdraw_for_all">全部提现</string>
    <string name="Please_enter_ali_real_name">请输入支付宝真实姓名</string>
    <string name="Please_enter_ali_account">请输入支付宝账号</string>
    <string name="tip_withdraw">买家确认收货后，立即获得管家费\n注：1元起提</string>
    <string name="Submit_immediately">立即提交</string>
    <string name="rmb">¥</string>
    <string name="cash_all">可提现金额 %1$s</string>
    <string name="pls_enter_tel">请输入手机号！</string>
    <string name="pls_enter_code">请输入手机验证码！</string>
    <string name="code_send_success">验证码发送成功!</string>

    <string name="pls_enter_real_name">请输入真实姓名!</string>
    <string name="pls_enter_card_number">请输入身份证号码!</string>
    <string name="pls_enter_nationalEmblem_img">请上传身份证国徽面!</string>
    <string name="pls_enter_portrait_img">请上传身份证人面像!</string>
    <string name="hint_id_card_length_short">身份证必须为18位!</string>
    <string name="pls_choose_live_cover">请先上传直播封面</string>
    <string name="pls_enter_live_title">请输入标题</string>
    <string name="pls_choose_live_type">请选择直播分类</string>
    <string name="pls_choose_live_sharpness">请选择直播清晰度</string>
    <string name="Cancel">取消</string>
    <string name="OK">确认</string>
    <string name="tips">提示</string>
    <string name="are_you_sure_logout">确认退出登录吗?</string>
    <string name="pls_choose_live_time">请选择直播时间</string>
    <string name="create_preview">创建预告</string>
    <string name="hint_stop_live">确定结束直播吗?</string>
    <string name="tip_live_delete_pause">直播已暂停,确定要删除记录吗?</string>
    <string name="tip_live_delete_preview">确定要删除该直播预告吗?</string>
    <string name="wx_xcx">小程序</string>
    <string name="tip_live_delete_finished">确定要删除此条直播记录吗?</string>
    <string name="my_prevue">我的预告</string>
    <string name="day">天</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="second">秒</string>
    <string name="delete_prevue">删除预告</string>
    <string name="tip_continue_live">确定继续直播吗?</string>
    <string name="live_shopping">直播商品</string>
    <string name="search_shopping_what_you_want_recommend">搜索你想推荐的商品</string>
    <string name="sole_out">下架</string>
    <string name="sole_on">上架</string>
    <string name="recommend">推荐</string>
    <string name="reverse">反转</string>
    <string name="whiten">美白</string>
    <string name="beautyLevel">磨皮</string>
    <string name="redden">红润</string>
    <string name="pls_complete_the_real_name_authentication">请您先完成实名认证</string>
    <string name="tip_real_name_audit">实名认证正在审核中,请等待审核通过后创建直播</string>

</resources>
