<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <View
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="@dimen/status_bar_default_height" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="@dimen/blank_title_height">

        <com.lib.kit.view.LimitButton
            android:id="@+id/lmb_return"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            app:Gravity="center"
            app:Iv_Height="@dimen/ic_return_lengh"
            app:Iv_Width="@dimen/ic_return_lengh"
            app:NormalSrc="@mipmap/ic_return_black" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/real_name"
            android:textColor="@color/black"
            android:textSize="@dimen/app_title_text_size" />

        <View
            android:layout_width="50dp"
            android:layout_height="match_parent" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/app_divider" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvExplain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:textColor="@color/app_orange"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                tools:text="认证信息已提交,正在审核中。"
                tools:visibility="visible" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="65dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/name"
                    android:textColor="#101010"
                    android:textSize="15sp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="12dp"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/pls_edit_real_name"
                    android:maxLength="15"
                    android:singleLine="true"
                    android:textColorHint="#888888"
                    android:textSize="15sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/app_divider" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="65dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/card_id"
                    android:textColor="#101010"
                    android:textSize="15sp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etCardNum"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="12dp"
                    android:background="@null"
                    android:digits="@string/digits_id_card"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_edit_id_card"
                    android:maxLength="18"
                    android:singleLine="true"
                    android:textColorHint="#888888"
                    android:textSize="15sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="@color/app_divider" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/asterisk"
                    android:textColor="#FF2900"
                    android:textSize="15sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dis_upload_back_card"
                    android:textColor="#101010"
                    android:textSize="15sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/hint_id_card"
                android:textColor="#6C6C6C"
                android:textSize="15sp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="117dp"
                        android:background="@mipmap/fe_card_front" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:gravity="center_horizontal"
                        android:text="@string/example_front"
                        android:textColor="#101010"
                        android:textSize="13sp" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="117dp"
                        android:background="@mipmap/fe_card_back" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:gravity="center_horizontal"
                        android:text="@string/example_back"
                        android:textColor="#101010"
                        android:textSize="13sp" />

                </androidx.appcompat.widget.LinearLayoutCompat>


            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="117dp">

                        <com.lib.kit.view.LimitButton
                            android:id="@+id/card_1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/bg_gray_corner"
                            app:Iv_Height="25dp"
                            app:Iv_Width="25dp"
                            app:NormalSrc="@mipmap/ic_add_gray" />

                        <com.lib.kit.view.RoundImageView
                            android:id="@+id/ivPortrait"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop"
                            app:radus="3dp" />

                    </FrameLayout>


                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:gravity="center_horizontal"
                        android:text="@string/click_for_up_front"
                        android:textColor="#101010"
                        android:textSize="13sp" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="117dp">

                        <com.lib.kit.view.LimitButton
                            android:id="@+id/card_2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/bg_gray_corner"
                            app:Iv_Height="25dp"
                            app:Iv_Width="25dp"
                            app:NormalSrc="@mipmap/ic_add_gray" />

                        <com.lib.kit.view.RoundImageView
                            android:id="@+id/ivNationalEmblem"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop"
                            app:radus="3dp" />

                    </FrameLayout>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:gravity="center_horizontal"
                        android:text="@string/click_for_up_back"
                        android:textColor="#101010"
                        android:textSize="13sp" />

                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCommit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/app_submit_btn_height"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/bg_black_circle"
                android:text="@string/commit_identity"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>