<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/bg_white_corner_top"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layCamera"
        android:layout_width="50dp"
        android:layout_marginTop="18dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="20dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:src="@mipmap/ic_camera" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reverse"
            android:textColor="#939393"
            android:textSize="@dimen/live_text_size" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_marginStart="20dp"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:text="@string/whiten"
            android:textSize="16sp"
            android:layout_height="wrap_content"/>

        <com.qmuiteam.qmui.widget.QMUISlider
            android:id="@+id/sliderWhiten"
            android:layout_width="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_marginStart="20dp"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:text="@string/beautyLevel"
            android:textSize="16sp"
            android:layout_height="wrap_content"/>

        <com.qmuiteam.qmui.widget.QMUISlider
            android:id="@+id/sliderBeauty"
            android:layout_width="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="25dp"
        android:layout_marginStart="20dp"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:text="@string/redden"
            android:textSize="16sp"
            android:layout_height="wrap_content"/>

        <com.qmuiteam.qmui.widget.QMUISlider
            android:id="@+id/sliderRedden"
            android:layout_width="match_parent"
            android:layout_marginStart="10dp"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>