<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_white_corner_top"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/live_shopping"
            android:textColor="@color/textColorGray1"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.lib.kit.view.LimitButton
            android:id="@+id/lmbReturn"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            app:Iv_Height="18dp"
            app:Iv_Width="18dp"
            app:NormalSrc="@mipmap/ic_return_gray" />

    </FrameLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etSearch"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="12dp"
            android:layout_weight="1"
            android:background="@drawable/bg_gray_circle"
            android:gravity="center_vertical"
            android:hint="@string/search_shopping_what_you_want_recommend"
            android:maxLength="15"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:singleLine="true"
            android:textColorHint="#888888"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSearch"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:background="@null"
            android:text="@string/search" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#F9F9F9" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        tools:listitem="@layout/item_shopping"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_height="263dp" />

</androidx.appcompat.widget.LinearLayoutCompat>